--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "--init-hook",
         "import sys; sys.path.insert(0, './core'); sys.path.insert(0, './parse_command')"
     ],
-    "python.linting.flake8Enabled": true
+    "python.linting.flake8Enabled": true,
+    "editor.rulers": [88],
 }
