--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,7 @@
     ],
     "python.linting.flake8Enabled": true,
     "editor.rulers": [88],
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportImportCycles": "none",
+    },
 }
