--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,12 @@
     "python.linting.pylintEnabled": false,
     "python.linting.pylintArgs": [
         "--init-hook",
-        "import sys; sys.path.insert(0, './core'); sys.path.insert(0, './parse_command')"
+        // "import sys; sys.path.insert(0, './core'); sys.path.insert(0, './parse_command'); sys.path.insert(0, './test')"
     ],
     "python.linting.flake8Enabled": true,
+    // "python.linting.flake8Args": [
+    //     "--ignore=E402",
+    // ],
     "editor.rulers": [88],
     "python.analysis.diagnosticSeverityOverrides": {
         "reportImportCycles": "none",
